--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<meta name="description" content="Simon Data Analytics Projects" />
-		<meta name="title" property="og:title" content="Data Analytics" />
+		<meta name="title" property="og:title" content="Data Analytics Projects" />
 		<meta property="og:type" content="Website" />
 		<meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51748688724_24eeb3b801_z.jpg" />
 		<meta name="description" property="og:description" content="Data Projects" /><meta name="author" content="Simon" />
