--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2>Data Cleaning in SQL<br />
+									<h2>Heart Disease Analysis with Python<br/>
 									</a></h2>
-									<p>In this project we conduct data exploration on a Covid19 dataset in SQL Server.</p>
+									<p>In this project we perform analysis and examine the relationsips among variables in people with and without heart disease.</p>
 								</header>
-								<a href="https://github.com/simon-analytics/PortfolioProjects/blob/main/COVID%20Project%20v1.sql" class="image main"><img src="images/covid19.jpg" alt="" /></a>
+								<a href="https://github.com/simon-analytics/PortfolioProjects/blob/main/Heart%20Disease%20Analysis%20-%20Python%20Pandas%20Project.ipynb" class="image main"><img src="images/heart.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/simon-analytics/PortfolioProjects/blob/main/COVID%20Project%20v1.sql" class="button large">View Project</a></li>
+									<li><a href="https://github.com/simon-analytics/PortfolioProjects/blob/main/Heart%20Disease%20Analysis%20-%20Python%20Pandas%20Project.ipynb" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -91,13 +91,13 @@
 								</article>
 								<article>
 									<header>
-										<h2>Heart Disease Analysis with Python<br />
+										<h2>Covid19 data cleaning and exploration in SQL<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/simon-analytics/PortfolioProjects/blob/main/Heart%20Disease%20Analysis%20-%20Python%20Pandas%20Project.ipynb" class="image fit"><img src="images/heart.jpg" alt="" /></a>
-									<p>Perform analysis and examine the relationsips between among variables in people with and without heart disease.</p>
+									<a href="https://github.com/simon-analytics/PortfolioProjects/blob/main/COVID%20Project%20v1.sql" class="image fit"><img src="images/covid19.jpg" alt="" /></a>
+									<p>In this project we conduct data exploration on a Covid19 dataset in SQL Server.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/simon-analytics/PortfolioProjects/blob/main/Heart%20Disease%20Analysis%20-%20Python%20Pandas%20Project.ipynb" class="button">View Project</a></li>
+										<li><a href="https://github.com/simon-analytics/PortfolioProjects/blob/main/COVID%20Project%20v1.sql" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
